Swagger completo.
